--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,5 +1,4 @@
-<div class="container">
-  <div class="box bg-full-transparent">
+<div class="container mb-5 mt-5">
     <div data-controller="user-management">
       <div class="box bg-transparent has-text-white">
         <h3 class="title is-5"><i class="fas fa-users"></i> Users Management</h3>
@@ -48,8 +47,13 @@
                         <i class="fas fa-edit"></i>
                       <% end %>
                       <% if user != current_user %>
-                        <%= button_to admin_delete_user_path(user), method: :delete, 
-                        data: { confirm: 'Are you sure you want to delete this user?', turbo: false },
+                        <%= button_to admin_delete_user_path(user), method: :delete, data: {
+                controller: "confirm",
+                action: "confirm#confirm",
+                confirm_title_value: "Delete Record?",
+                confirm_message_value: "This will permanently remove the users.",
+                confirm_confirm_text_value: "Yes, delete it!"
+              },
                         class: "button is-small is-danger is-outlined", 
                         form: { style: 'display: inline-block;' } do %>
                           <i class="fas fa-trash"></i>
@@ -79,5 +83,4 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
