--- a/app/views/admin/dashboard/reports.html.erb
+++ b/app/views/admin/dashboard/reports.html.erb
@@ -1,5 +1,4 @@
-<div class="container">
-  <div class="box bg-full-transparent">
+<div class="container mb-5 mt-5">
     <div data-controller="user-management">
       <div class="box bg-transparent has-text-white">
         <h3 class="title is-5"><i class="fas fa-chart-bar"></i> Reports</h3>
@@ -21,5 +20,4 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
