--- a/app/views/mangas/edit.html.erb
+++ b/app/views/mangas/edit.html.erb
@@ -1,5 +1,4 @@
-<div class="container">
-  <div class="box bg-full-transparent">
+<div class="container mt-5 mb-5">
     <div class="columns is-centered">
       <div class="column is-half">
         <div class="box bg-transparent">
@@ -50,7 +49,13 @@
                 <%= f.text_area :synopsis, class: "textarea bg-tansparent", rows: "10" %>
               </div>
               <div class="actions">
-                <%= f.submit "Update Manga", class: "button bg-tansparent" %>
+                <%= f.submit "Update Manga", class: "button bg-tansparent", data: {
+                controller: "confirm",
+                action: "confirm#confirm",
+                confirm_title_value: "Update?",
+                confirm_message_value: "Do you want to save the changes?",
+                confirm_confirm_text_value: "Yes, update it!"
+              } %>
               </div>
             <% end %>
           </div>
@@ -60,5 +65,4 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
