--- a/app/views/mangas/genres.html.erb
+++ b/app/views/mangas/genres.html.erb
@@ -12,7 +12,13 @@
           <div class="genre-actions is-centered">
             <% if current_user&.admin? %>
               <%= button_to "Delete", genre_path(genre), method: :delete, 
-                  onclick: "return confirm('Are you sure you want to delete this manga?');", 
+                  data: {
+                controller: "confirm",
+                action: "confirm#confirm",
+                confirm_title_value: "Delete?",
+                confirm_message_value: "This will permanently remove the genre.",
+                confirm_confirm_text_value: "Yes, delete it!"
+              }, 
                   class: "button is-small" %>
             <% end %>
           </div>
@@ -21,14 +27,24 @@
     </div>
   <% end %>
   <% if current_user&.admin? %>
-    <div id="add-genre-form" class="add-genre-section">
-      <h2>Add New Genre</h2>
-      <%= form_with(model: Genre.new, url: genres_path, local: true, class: "genre-form") do |form| %>
-        <div class="form-group">
-          <%= form.text_field :name, class: "form-input", placeholder: "name genre" %>
+    <div class="columns is-centered">
+      <div class="column is-half">
+        <div id="add-genre-form" class="add-genre-section">
+          <h2>Add New Genre</h2>
+          <%= form_with(model: Genre.new, url: genres_path, local: true, class: "genre-form") do |form| %>
+            <div class="form-group">
+              <%= form.text_field :name, class: "form-input", placeholder: "name genre" %>
+            </div>
+            <%= form.submit "Add", class: "button bg-transparent", data: {
+                controller: "confirm",
+                action: "confirm#confirm",
+                confirm_title_value: "Added?",
+                confirm_message_value: "Do you want to add the genre?",
+                confirm_confirm_text_value: "Yes, add it!"
+              } %>
+          <% end %>
         </div>
-        <%= form.submit "Add", class: "button bg-transparent" %>
-      <% end %>
+      </div>
     </div>
   <% end %>
 </div>
