--- a/app/views/mangas/index.html.erb
+++ b/app/views/mangas/index.html.erb
@@ -2,7 +2,7 @@
   <div class="page-header">
     <h1>Manga</h1>
     <% if current_user&.admin? %>
-      <a href="<%= new_manga_path %>" class="add-new">+ Add New Manga</a>
+      <%= button_to "+ Add New Manga", new_manga_path, method: :get, class: "button bg-transparent", form_class: "inline" %>
     <% end %>
   </div>
   <% if @mangas.any? %>
@@ -23,7 +23,13 @@
               <div class="manga-actions">
                 <% if current_user&.admin? %>
                   <%= link_to "Edit", edit_manga_path(manga.title), class: "button is-small"  %>
-                  <%= button_to "Delete", manga, method: :delete, class: "button is-small", onclick: "return confirm('Are you sure you want to delete this manga?');" %>
+                  <%= button_to "Delete", manga, method: :delete, class: "button is-small", data: {
+                controller: "confirm",
+                action: "confirm#confirm",
+                confirm_title_value: "Delete?",
+                confirm_message_value: "This will permanently remove the manga.",
+                confirm_confirm_text_value: "Yes, delete it!"
+              } %>
                 <% end %>
               </div>
             </div>
