active storage - added avatar

--- a/app/views/admin/dashboard/edit_user.html.erb
+++ b/app/views/admin/dashboard/edit_user.html.erb
@@ -52,7 +52,7 @@
               } %>
             </div>
             <div class="control">
-              <%= link_to "Cancel", admin_dashboard_path, class: "button bg-transparent" %>
+              <%= link_to "Cancel", admin_usermanagement_path, class: "button bg-transparent" %>
             </div>
           </div>
         <% end %>
