--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
               <% end %>
               <div class="navbar-dropdown bg-full-transparent">
                 <% if current_user.member? %>
-                  <a class="navbar-item" href="<%= member_dashboard_path %>">
+                  <a class="navbar-item" href="<%= member_account_path %>">
                     <span class="icon">
                       <i class="fas fa-tools"></i>
                     </span>
