--- a/app/views/mangas/edit.html.erb
+++ b/app/views/mangas/edit.html.erb
@@ -54,7 +54,8 @@
                 action: "confirm#confirm",
                 confirm_title_value: "Update?",
                 confirm_message_value: "Do you want to save the changes?",
-                confirm_confirm_text_value: "Yes, update it!"
+                confirm_confirm_text_value: "Yes, update it!",
+                confirm_button_color_value: "#171515"
               } %>
               </div>
             <% end %>
