--- a/app/views/mangas/genres.html.erb
+++ b/app/views/mangas/genres.html.erb
@@ -40,7 +40,8 @@
                 action: "confirm#confirm",
                 confirm_title_value: "Added?",
                 confirm_message_value: "Do you want to add the genre?",
-                confirm_confirm_text_value: "Yes, add it!"
+                confirm_confirm_text_value: "Yes, add it!",
+                confirm_button_color_value: "#171515"
               } %>
           <% end %>
         </div>
