--- a/app/views/mangas/new.html.erb
+++ b/app/views/mangas/new.html.erb
@@ -55,7 +55,8 @@
                 action: "confirm#confirm",
                 confirm_title_value: "Confirmation",
                 confirm_message_value: "Do you want to create the manga?",
-                confirm_confirm_text_value: "Yes, create it!"
+                confirm_confirm_text_value: "Yes, create it!",
+                confirm_button_color_value: "#171515"
               } %>
                 </div>
               </div>
