--- a/app/views/mangas/index.html.erb
+++ b/app/views/mangas/index.html.erb
@@ -9,7 +9,7 @@
     <div class="manga-grid">
       <% @mangas.each do |manga| %>
         <div class="manga-card">
-          <a href="<%= manga_path(manga.title) %>">
+          <a href="<%= manga_path(manga.title.gsub(' ', '-')) %>">
             <div class="manga-cover-container">
               <% if manga.image_cover.present? %>
                 <img src="<%= manga.image_cover %>" alt="<%= manga.title %> Cover" class="manga-cover">
