--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -15,10 +15,10 @@
       <p class="manga-info"><strong>Series:</strong> <%= @manga.series %></p>
       <p class="manga-info"><strong>Author:</strong> <%= @manga.author %></p>
       <p class="manga-info"><strong>Rating:</strong> ⭐ <%= @manga.rating %>/10</p>
-      <p class="manga-info"><strong>Genre:</strong> 
-          <% @manga.genre.split(',').map(&:strip).each_with_index do |genre, index| %>
+      <p class="manga-info"><strong>Genre:</strong>
+        <% @manga.genre.split(',').map(&:strip).each_with_index do |genre, index| %>
           <%= link_to genre, "/manga/genre/#{ERB::Util.url_encode(genre)}" %><%= ", " unless index == @manga.genre.split(',').size - 1 %>
-          <% end %>
+        <% end %>
       </p>
       <div class="manga-actions">
         <% if user_signed_in? %>
@@ -33,8 +33,8 @@
           <% end %>
         <% end %>
         <% if current_user&.admin? %>
-          <a href="<%= @manga.title %>/chapter/new" class="button bg-transparent">New</a>
-          <%= link_to "Edit", edit_manga_path(@manga.title), class: "button bg-transparent" %>
+          <a href="<%= @manga.title.gsub(' ', '-') %>/chapter/new" class="button bg-transparent">New</a>
+          <%= link_to "Edit", edit_manga_path(@manga.title.gsub(' ', '-')), class: "button bg-transparent" %>
           <%= button_to "Delete", @manga, method: :delete, class: "button bg-transparent", data: {
                 controller: "confirm",
                 action: "confirm#confirm",
@@ -60,7 +60,7 @@
         <ul>
           <% @chapters.each do |chapter| %>
             <li>
-              <%= link_to "Chapter #{chapter.chapter_number}", manga_chapter_path(@manga.title, chapter.chapter_number) %>
+              <%= link_to "Chapter #{chapter.chapter_number}", manga_chapter_path(@manga.title.gsub(' ', '-'), chapter.chapter_number) %>
             </li>
           <% end %>
         </ul>
